--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -23,12 +23,12 @@
 
     <ItemGroup>
         <PackageReference Include="DeepL.net" Version="1.8.0" />
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01989" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01989" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01989" />
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01989" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01989" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02103"/>
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02103"/>
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02103"/>
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02103"/>
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02103"/>
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-02103"/>
         <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
@@ -40,15 +40,15 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-beta.2" />
-        <PackageReference Include="Quartz" Version="3.8.0" />
-        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.0" />
-        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
-        <PackageReference Include="Quartz.Jobs" Version="3.8.0" />
-        <PackageReference Include="Quartz.Serialization.Json" Version="3.8.0" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0"/>
+        <PackageReference Include="Quartz" Version="3.8.1"/>
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.1"/>
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.1"/>
+        <PackageReference Include="Quartz.Jobs" Version="3.8.1"/>
+        <PackageReference Include="Quartz.Serialization.Json" Version="3.8.1"/>
         <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10373"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
         
     </ItemGroup>
