--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -8,6 +8,7 @@
         <RootNamespace>MADS</RootNamespace>
         <LangVersion>latest</LangVersion>
         <InvariantGlobalization>false</InvariantGlobalization>
+        <DefaultLanguage>en-US</DefaultLanguage>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,20 +24,20 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DeepL.net" Version="1.8.0" />
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02115" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-02115" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02115" />
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02115" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-02115" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-02115" />
+        <PackageReference Include="DeepL.net" Version="1.9.0" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-pr-1719-00079" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-pr-1719-00079" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-pr-1719-00079" />
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-pr-1719-00079" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-pr-1719-00079" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-pr-1719-00079" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
-        <PackageReference Include="Humanizer" Version="2.14.1" />
-        <PackageReference Include="Humanizer.Core" Version="2.14.1" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-3.final" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.0-3.final" />
-        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.9.0-3.final" />
+        <PackageReference Include="Humanizer" Version="3.0.0-beta.13" />
+        <PackageReference Include="Humanizer.Core" Version="3.0.0-beta.13" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.2" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.9.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -48,10 +49,11 @@
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.1"/>
         <PackageReference Include="Quartz.Jobs" Version="3.8.1"/>
         <PackageReference Include="Quartz.Serialization.Json" Version="3.8.1"/>
-        <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+        <PackageReference Include="Serilog" Version="4.0.0-dev-02113" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10377" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
-        
+        <PackageReference Include="Testcontainers" Version="3.8.0" />
+        <PackageReference Include="Testcontainers.MariaDb" Version="3.8.0" />
     </ItemGroup>
 </Project>
