--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -25,6 +25,10 @@
 
     <ItemGroup>
         <PackageReference Include="DeepL.net" Version="1.9.0" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02312" />
+        <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02312" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02312" />
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02312" />
         <PackageReference Include="EntityFramework" Version="6.5.1" />
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
         <PackageReference Include="Humanizer" Version="3.0.0-beta.13" />
@@ -49,12 +53,5 @@
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Testcontainers" Version="3.9.0" />
         <PackageReference Include="Testcontainers.MariaDb" Version="3.9.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Libs\DSharpPlus\DSharpPlus.Commands\DSharpPlus.Commands.csproj" />
-      <ProjectReference Include="..\Libs\DSharpPlus\DSharpPlus.Interactivity\DSharpPlus.Interactivity.csproj" />
-      <ProjectReference Include="..\Libs\DSharpPlus\DSharpPlus.Rest\DSharpPlus.Rest.csproj" />
-      <ProjectReference Include="..\Libs\DSharpPlus\DSharpPlus\DSharpPlus.csproj" />
     </ItemGroup>
 </Project>
