--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -25,10 +25,10 @@
 
     <ItemGroup>
         <PackageReference Include="DeepL.net" Version="1.9.0" />
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02317" />
-        <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02317" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02312" />
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02312" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02351" />
+        <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02351" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02351" />
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-02351" />
         <PackageReference Include="EntityFramework" Version="6.5.1" />
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
         <PackageReference Include="Humanizer" Version="3.0.0-beta.54" />
@@ -42,14 +42,14 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-        <PackageReference Include="Quartz" Version="3.11.0" />
-        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.11.0" />
-        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.11.0" />
-        <PackageReference Include="Quartz.Jobs" Version="3.11.0" />
-        <PackageReference Include="Quartz.Serialization.Json" Version="3.11.0" />
-        <PackageReference Include="Serilog" Version="4.0.0" />
+        <PackageReference Include="Quartz" Version="3.13.0" />
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.13.0" />
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.0" />
+        <PackageReference Include="Quartz.Jobs" Version="3.13.0" />
+        <PackageReference Include="Quartz.Serialization.Json" Version="3.13.0" />
+        <PackageReference Include="Serilog" Version="4.0.2-dev-02220" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10377" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10398" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Testcontainers" Version="3.9.0" />
         <PackageReference Include="Testcontainers.MariaDb" Version="3.9.0" />
